# quantframe

./: .eslintrc.json  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
docs/: readme.md
src/: App.tsx  app.tsx  index.css  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: axios.ts  errorHandling.ts  index.ts  wfmClient.ts
src/app/: app.tsx  index.ts  inventory.tsx  login.tsx  settings.tsx  splashscreen.tsx  visualizations.tsx
src/components/: core.tsx  countdown.tsx  icons.tsx  index.ts  modal.tsx
src/containers/: clock.tsx  index.ts  inventory.tsx  login.tsx  settings.tsx  splashscreen.tsx  transaction-control.tsx  visualizations.tsx
src/containers/settings/: index.tsx  settingsApp.tsx  settingsPowerUser.tsx  settingsWfm.tsx  types.ts
src/lib/: api.ts  axios.ts  components.tsx  constants.ts  db.ts  errorHandling.ts  index.ts  persistance.ts  quant.ts  rateLimiter.ts  tesseract.ts  types.ts  wfmClient.ts
src/lib/wfm/: axios.ts  index.ts  v1.d.ts
src/models/: db.ts  index.ts  inventory.ts  json.ts  persistance.ts  settings.ts  transactions.ts
src/widgets/: clock.tsx  index.ts  inventory.tsx  settings.tsx  transaction-control.tsx  visualizations.tsx
